RESOLVED FIXED190070
ByValInfo should not use integer offsets.
https://bugs.webkit.org/show_bug.cgi?id=190070
Summary ByValInfo should not use integer offsets.
Mark Lam
Reported 2018-09-27 21:51:15 PDT
Attachments
proposed patch. (12.66 KB, patch)
2018-09-27 21:59 PDT, Mark Lam
saam: review+
Mark Lam
Comment 1 2018-09-27 21:59:21 PDT
Created attachment 351053 [details] proposed patch.
Saam Barati
Comment 2 2018-09-27 22:02:32 PDT
Comment on attachment 351053 [details] proposed patch. r=me
Mark Lam
Comment 3 2018-09-27 22:07:38 PDT
Thanks for the review. Landed in r236587: <http://trac.webkit.org/r236587>.
Note You need to log in before you can comment on or make changes to this bug.